@@ -5,88 +5,92 @@
  * @author   genify(caijf@corp.netease.com)
  * ------------------------------------------
  */
-var f = function(){
-    // variable declaration
-    var _  = NEJ.P,
-        _o = NEJ.O,
-        _r = NEJ.R,
-        _f = NEJ.F,
-        _v = _('nej.v'),
-        _u = _('nej.u'),
-        _p = _('nej.ut'),
-        _pro;
-    if (!!_p._$$Event) return;
+NEJ.define([
+    '{lib}base/global.js',
+    '{lib}base/klass.js',
+    '{lib}base/event.js',
+    '{lib}base/util.js'
+],function(NEJ,_k,_v,_u,_p,_o,_f,_r){
+    var _pro;
     /**
      * 控件基类，主要实现以下功能：
      * [ul]
      *   对事件驱动编程模型的支持
      *   对控件通用行为及业务逻辑的抽象
      * [/ul]
+     * 
+     * 脚本举例
      * [code]
-     *   // 自定义一个控件及使用回收的流程
-     *   var _  = NEJ.P,
-     *       _p = _('pt.w'),
-     *       _pro;
+     *   NEJ.define([
+     *       '{lib}base/klass.js',
+     *       '{lib}util/event.js'
+     *   ],function(_k,_w,_p,_o,_f,_r){
+     *       // 自定义一个控件及使用回收的流程
+     *       var _pro;
      *   
-     *   // 第一步
-     *   // 定义控件类，从父类继承
-     *   _p._$$Widget = NEJ.C();
-     *   _pro = _p._$$Widget._$extend(nej.ut._$$Event);
+     *       // 第一步
+     *       // 定义控件类，从父类继承
+     *       _p._$$Widget = _k._$klass();
+     *       _pro = _p._$$Widget._$extend(_p._$$Event);
      *   
-     *   // 第二步
-     *   // 重写控件初始化业务逻辑
-     *   _pro.__init = function __init(_options){
-     *       // _options - 配置参数信息
-     *       //            初始化时一般不对该参数做处理
-     *       // 调用父类初始化业务逻辑
-     *       this.__supInit(_options);
-     *       // TODO something
-     *   };
+     *       // 第二步
+     *       // 重写控件初始化业务逻辑
+     *       _pro.__init = function(_options){
+     *           // _options - 配置参数信息
+     *           //            初始化时一般不对该参数做处理
+     *           // 调用父类初始化业务逻辑
+     *           this.__super(_options);
+     *           // TODO something
+     *       };
      *   
-     *   // 第三步
-     *   // 重写控件重置业务逻辑
-     *   _pro.__reset = function __reset(_options){
-     *       // _options - 配置参数信息
-     *       //            此处重置控件配置信息
-     *       // 调用父类重置业务逻辑
-     *       this.__supReset(_options);
-     *       // TODO something
-     *   };
+     *       // 第三步
+     *       // 重写控件重置业务逻辑
+     *       _pro.__reset = function(_options){
+     *           // _options - 配置参数信息
+     *           //            此处重置控件配置信息
+     *           // 调用父类重置业务逻辑
+     *           this.__super(_options);
+     *           // TODO something
+     *       };
      *   
-     *   // 第四步
-     *   // 重写控件回收业务逻辑
-     *   _pro.__destroy = function __destroy(){
-     *       // 调用父类回收业务逻辑
-     *       this.__supDestroy();
-     *       // TODO something
-     *   };
+     *       // 第四步
+     *       // 重写控件回收业务逻辑
+     *       _pro.__destroy = function __destroy(){
+     *           // 调用父类回收业务逻辑
+     *           this.__super();
+     *           // TODO something
+     *       };
      *   
-     *   // 第五步
-     *   // 使用控件
-     *   var _widget = _p._$$Widget._$allocate({
-     *       a:'aaaaaaaaaaa',
-     *       b:'bbbbbbbbbbbbb',
-     *       c:'ccccccccccccccc'
+     *       // 第五步
+     *       // 使用控件
+     *       var _widget = _p._$$Widget._$allocate({
+     *           a:'aaaaaaaaaaa',
+     *           b:'bbbbbbbbbbbbb',
+     *           c:'ccccccccccccccc'
+     *       });
+     *   
+     *       // 第六步
+     *       // 回收控件
+     *       _widget = _widget._$recycle();
+     *       // 也可以使用以下方式回收，建议使用上面的回收方式
+     *       _widget = _p._$$Widget._$recycle(_widget);
      *   });
-     *   
-     *   // 第六步
-     *   // 回收控件
-     *   _widget = _widget._$recycle();
-     *   // 也可以使用以下方式回收，建议使用上面的回收方式
-     *   _widget = _p._$$Widget._$recycle(_widget);
      * [/code]
      * 
-     * @class {nej.ut._$$Event}
+     * @class {_$$Event}
      * @param {Object} 配置参数，根据控件实际情况提供配置参数支持
      *
      * [hr]
-     * 控件回收前触发事件，控件在具体实现时如需触发回收前的事件
+     * 
+     * 控件回收前触发事件，控件在具体实现时如需触发回收前的事件<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 重写控件回收业务逻辑触发onbeforerecycle事件
      *   _pro.__destroy = function(){
      *       this._$dispatchEvent('onbeforerecycle');
      *       // 调用父类回收业务逻辑
-     *       this.__supDestroy();
+     *       this.__super();
      *       // TODO something
      *   };
      *   // 监测onbeforerecycle事件
@@ -96,16 +100,20 @@ var f = function(){
      *       }
      *   });
      * [/code]
+     * 
      * @event  {onbeforerecycle}
      * @param  {Object} 事件触发信息
      *
      * [hr]
-     * 控件回收后触发事件，控件在具体实现时如需触发回收后的事件
+     * 
+     * 控件回收后触发事件，控件在具体实现时如需触发回收后的事件<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 重写控件回收业务逻辑触发onbeforerecycle事件
      *   _pro.__destroy = function(){
      *       // 调用父类回收业务逻辑
-     *       this.__supDestroy();
+     *       this.__super();
      *       // TODO something
      *       this._$dispatchEvent('onaftercycle');
      *   };
@@ -117,14 +125,17 @@ var f = function(){
      *       }
      *   });
      * [/code]
+     * 
      * @event  {onaftercycle}
      * @param  {Object} 事件触发信息
      */
-    _p._$$Event = NEJ.C();
+    _p._$$Event = _k._$klass();
     _pro = _p._$$Event.prototype;
     /**
      * 控件分配，NEJ框架提供的所有控件统一使用分配和回收机制，
-     * 分配空间时会优先考虑使用前面回收的同种控件，只有在没有可用控件的情况下才会实例化新的控件
+     * 分配空间时会优先考虑使用前面回收的同种控件，只有在没有可用控件的情况下才会实例化新的控件<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 分配一个控件
      *   var _widget = _p._$$Widget._$allocate({
@@ -135,6 +146,7 @@ var f = function(){
      *       }
      *   });
      * [/code]
+     * 
      * @static
      * @method {_$allocate}
      * @see    {#_$getInstance}
@@ -155,7 +167,9 @@ var f = function(){
     };
     /**
      * 控件回收，NEJ框架提供的所有控件统一使用分配和回收机制，
-     * 如果提供的实例非当前类的实例则自动调整为输入实例的类来回收此实例
+     * 如果提供的实例非当前类的实例则自动调整为输入实例的类来回收此实例<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 回收前面分配的实例有两种方式
      *   // 如果不能确定实例的构造类，则可以直接使用实例的回收接口
@@ -165,9 +179,10 @@ var f = function(){
      *   // 如果回收多个实例则使用构造类的静态回收接口
      *   _p._$$Widget._$recycle([_widget0,_widget1]);
      * [/code]
+     * 
      * @static
      * @method {_$recycle}
-     * @param  {nej.ut._$$Event|Array} 待回收实例或者实例列表
+     * @param  {_$$Event|Array} 待回收实例或者实例列表
      * @return {Void}
      */
     _p._$$Event._$recycle = (function(){
@@ -182,19 +197,24 @@ var f = function(){
                 if (!(_instance instanceof this)){
                     // use constructor recycle instance
                     var _class = _instance.constructor;
-                    if (!!_class._$recycle)
+                    if (!!_class._$recycle){
                         _class._$recycle(_instance);
+                    }
                     return null;
                 }
                 // delete singleton instance
-                if (_instance==this.__instance)
+                if (_instance==this.__instance){
                     delete this.__instance;
-                if (_instance==this.__inctanse)
+                }
+                if (_instance==this.__inctanse){
                     delete this.__inctanse;
-                // dorecycle
+                }
+                // do recycle
                 _instance.__destroy();
                 // recycle instance
-                if (!this.__pool) this.__pool = [];
+                if (!this.__pool){
+                    this.__pool = [];
+                } 
                 if (_u._$indexOf(this.__pool,_instance)<0){
                     this.__pool.push(_instance);
                 }
@@ -206,7 +226,9 @@ var f = function(){
     })();
     /**
      * 取控件实例（单例），如果控件指明了为单例模式，
-     * 则项目中使用该控件时统一使用此接口获取控件实例，使用方式同{#_$allocate}
+     * 则项目中使用该控件时统一使用此接口获取控件实例，使用方式同{#_$allocate}<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 取控件单例，确保在第一次取单例时输入所有配置参数
      *   var _widget = _p._$$Widget._$getInstance({
@@ -221,9 +243,11 @@ var f = function(){
      *   var _widget1 = _p._$$Widget._$getInstance({
      *       conf0:'bbbbb'  // <-- 如果单例已生成，则这里的配置信息不会生效
      *   });
+     * 
      *   // 等价于如下调用
      *   var _widget2 = _p._$$Widget._$getInstance();
      * [/code]
+     * 
      * @static
      * @method {_$getInstance}
      * @see    {#_$allocate}
@@ -231,15 +255,17 @@ var f = function(){
      * @return {Void}
      */
     _p._$$Event._$getInstance = function(_options){
-        _options = _options||{};
-        if (!this.__instance)
+        if (!this.__instance){
             this.__instance = this._$allocate(_options);
+        }
         return this.__instance;
     };
     /**
      * 取控件实例（单例），如果控件指明了为单例模式，
      * 则项目中使用该控件时统一使用此接口获取控件实例，使用方式同{#_$getInstance}，
-     * 该接口同{#_$getInstance}接口的主要区别在于输入的配置参数是否在每次调用接口时都重置
+     * 该接口同{#_$getInstance}接口的主要区别在于输入的配置参数是否在每次调用接口时都重置<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 取控件单例，确保在第一次取单例时输入所有配置参数
      *   var _widget = _p._$$Widget._$getInstanceWithReset({
@@ -255,6 +281,7 @@ var f = function(){
      *       conf0:'bbbbb'  // <-- 如果单例已生成，则重置这里的配置信息
      *   });
      * [/code]
+     * 
      * @static
      * @method {_$getInstanceWithReset}
      * @see    {#_$getInstance}
@@ -263,7 +290,6 @@ var f = function(){
      * @return {Void}
      */
     _p._$$Event._$getInstanceWithReset = function(_options,_clear){
-        _options = _options||{};
         // clear instance
         if (!!_clear&&!!this.__inctanse){
             this.__inctanse._$recycle();
@@ -280,15 +306,18 @@ var f = function(){
     /**
      * 控件初始化，
      * 子类可重写此接口业务逻辑，
-     * 子类可通过调用__supInit接口调用父类的初始化业务逻辑
+     * 子类可通过调用__super接口调用父类的初始化业务逻辑<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 子类控件初始化业务逻辑
      *   _pro.__init = function(){
      *       // 调用父类控件初始化
-     *       this.__supInit();
+     *       this.__super();
      *       // TODO something
      *   };
      * [/code]
+     * 
      * @protected
      * @method {__init}
      * @return {Void}
@@ -305,15 +334,18 @@ var f = function(){
      *   缓存通过配置参数输入的回调事件
      * [/ul]
      * 子类重写此接口业务逻辑来处理具体控件对配置参数的处理，
-     * 子类通过调用__supReset接口调用父类的重置业务逻辑
+     * 子类通过调用__super接口调用父类的重置业务逻辑<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 子类控件重置业务逻辑
      *   _pro.__reset = function(_options){
      *       // 调用父类控件重置逻辑
-     *       this.__supReset(_options);
+     *       this.__super(_options);
      *       // TODO something
      *   };
      * [/code]
+     * 
      * @protected
      * @method {__reset}
      * @param  {Object} 配置参数，根据控件实际情况提供配置参数支持
@@ -329,24 +361,28 @@ var f = function(){
      *   通过配置参数输入的事件回调的清理
      *   通过{#__doInitDomEvent}接口添加的DOM事件的清理
      * [/ul]
+     * 
      * 一般情况下控件还需回收通过重置接口{#__reset}产生的数据，
      * 子类可重写此接口业务逻辑来触发{#onbeforerecycle}和{#onafterrecycle}事件，
-     * 子类可通过调用__supDestroy接口调用父类的销毁业务逻辑
+     * 子类可通过调用__super接口调用父类的销毁业务逻辑<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 子类重写控件销毁逻辑
      *   _pro.__destroy = function(){
      *       // 触发回收之前事件
      *       this._$dispatchEvent('onbeforerecycle');
      *       // 调用父类清理逻辑，如果有触发回收之后事件则以下业务逻辑需在触发回收之后事件后面调用
-     *       //this.__supDestroy();
+     *       //this.__super();
      *       // 清理本控件的数据
      *       delete this.__conf0;
      *       this.__widget2 = this.__widget2._$recycle();
      *       // 触发回收之后事件，确保在onafterrecycle事件被清理前触发
      *       this._$dispatchEvent('onafterrecycle');
-     *       this.__supDestroy();
+     *       this.__super();
      *   };
      * [/code]
+     * 
      * @protected
      * @method {__destroy}
      * @return {Void}
@@ -356,12 +392,13 @@ var f = function(){
         this.__doClearDomEvent();
     };
     /**
-     * 初始化DOM事件，重置接口{#__reset}中需要通过
-     * {nej.v#_$addEvent}接口添加的事件，使用此接口添加可以在回收时自动被清理
+     * 初始化事件，重置接口__reset中需要通过_$addEvent接口添加的事件，使用此接口添加可以在回收时自动被清理<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 子类重置接口添加节点事件
      *   _pro.__reset = function(_options){
-     *       this.__supReset(_options);
+     *       this.__super(_options);
      *       // 添加DOM事件或者自定义事件
      *       this.__doInitDomEvent([
      *           [document,'click',this.__onDocClick._$bind(this)],
@@ -369,6 +406,7 @@ var f = function(){
      *       ]);
      *   };
      * [/code]
+     * 
      * @protected
      * @method {__doInitDomEvent}
      * @see    {#__doClearDomEvent}
@@ -386,8 +424,17 @@ var f = function(){
         };
     })();
     /**
-     * 清除DOM事件
-     * {#_$recycle}接口会自动调用来清理这种DOM事件
+     * 清除DOM事件，_$recycle接口会自动调用来清理这种DOM事件<br/>
+     * 
+     * 脚本举例
+     * [code]
+     *   // 子类重置接口清理节点事件
+     *   _pro.__destroy = function(_options){
+     *       this.__doClearDomEvent();
+     *       this.__super(_options);
+     *   };
+     * [/code]
+     * 
      * @protected
      * @method {__doClearDomEvent}
      * @see    {#__doInitDomEvent}
@@ -403,7 +450,20 @@ var f = function(){
         };
     })();
     /**
-     * 清理所有组合的控件
+     * 清理所有组合的控件<br/>
+     * 
+     * 脚本举例
+     * [code]
+     *   // 子类重置接口清理组件
+     *   _pro.__destroy = function(_options){
+     *       this.__doClearComponent(function(_inst){
+     *           // 不回收_p._$$Widget2控件实例
+     *           return _inst instanceof _p._$$Widget2;
+     *       });
+     *       this.__super(_options);
+     *   };
+     * [/code]
+     * 
      * @protected
      * @method {__doClearComponent}
      * @param  {Function} 过滤接口
@@ -419,20 +479,25 @@ var f = function(){
         });
     };
     /**
-     * 回收控件，通过实例的构造类来回收当前实例
+     * 回收控件，通过实例的构造类来回收当前实例<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 通过实例的接口回收当前实例
      *   _widget._$recycle();
      * [/code]
-     * @see    {#_$allocate}
+     * 
      * @method {_$recycle}
+     * @see    {#_$allocate}
      * @return {Void}
      */
     _pro._$recycle = function(){
         this.constructor._$recycle(this);
     };
     /**
-     * 判断是否有注册事件回调
+     * 判断是否有注册事件回调<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 分配实例
      *   var _widget = _p._$$Widget._$allocate({
@@ -443,6 +508,7 @@ var f = function(){
      *   // 判断控件实例是否注册有onok事件回调
      *   _widget._$hasEvent('onok');
      * [/code]
+     * 
      * @method {_$hasEvent}
      * @param  {String}  事件类型
      * @return {Boolean} 是否注册了事件回调
@@ -453,20 +519,21 @@ var f = function(){
         return !!_event&&_event!==_f;
     };
     /**
-     * 添加事件，覆盖原有事件
-     * @deprecated
-     * @method {_$addEvent}
-     * @see    {#_$setEvent}
-     * @param  {String}   事件类型
-     * @param  {Function} 事件处理函数
-     * @return {Void}
-     */
-    _pro._$addEvent = function(_type,_event){
-        this._$setEvent.apply(this,arguments);
-        return this;
-    };
-    /**
-     * 删除事件
+     * 删除单个事件回调<br/>
+     * 
+     * 脚本举例
+     * [code]
+     *   var _handler = function(){
+     *       // TODO
+     *   };
+     *   // 分配实例
+     *   var _widget = _p._$$Widget._$allocate({
+     *       onok:_handler
+     *   });
+     *   // 删除onok事件回调
+     *   _widget._$delEvent('onok',_handler);
+     * [/code]
+     * 
      * @method {_$delEvent}
      * @param  {String}   事件类型
      * @param  {Function} 事件处理函数
@@ -481,6 +548,7 @@ var f = function(){
             }
             return;
         }
+        // batch remove
         _u._$reverseEach(
             _events,function(_func,_index,_list){
                 if (_func==_event){
@@ -488,9 +556,14 @@ var f = function(){
                 }
             }
         );
+        if (!_events.length){
+            delete this.__events[_type];
+        }
     };
     /**
-     * 重置事件，覆盖原有事件
+     * 重置事件，覆盖原有事件<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 分配实例
      *   var _widget = _p._$$Widget._$allocate();
@@ -502,6 +575,7 @@ var f = function(){
      *       // TODO something
      *   });
      * [/code]
+     * 
      * @method {_$setEvent}
      * @param  {String}   事件类型，大小写不敏感
      * @param  {Function} 事件处理函数
@@ -513,7 +587,9 @@ var f = function(){
         }
     };
     /**
-     * 批量添加事件
+     * 批量添加事件<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 分配实例
      *   var _widget = _p._$$Widget._$allocate();
@@ -527,6 +603,7 @@ var f = function(){
      *       }
      *   });
      * [/code]
+     * 
      * @method {_$batEvent}
      * @see    {#_$setEvent}
      * @param  {Object} 事件集合,{type:function}
@@ -541,7 +618,9 @@ var f = function(){
         };
     })();
     /**
-     * 清除事件，没有指定类型则清除所有事件
+     * 清除事件，没有指定类型则清除所有事件<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 分配实例
      *   var _widget = _p._$$Widget._$allocate({
@@ -554,6 +633,7 @@ var f = function(){
      *   // 清除所有时间回调
      *   _widget._$clearEvent();
      * [/code]
+     * 
      * @method {_$clearEvent}
      * @param  {String} 事件类型
      * @return {Void}
@@ -572,7 +652,9 @@ var f = function(){
         };
     })();
     /**
-     * 追加事件，通过此接口可以对同一个事件添加多个回调函数
+     * 追加事件，通过此接口可以对同一个事件添加多个回调函数<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 分配实例
      *   var _widget = _p._$$Widget._$allocate({
@@ -587,6 +669,7 @@ var f = function(){
      *       }
      *   });
      * [/code]
+     * 
      * @method {_$pushEvent}
      * @param  {String}   事件类型
      * @param  {Function} 事件处理函数
@@ -610,7 +693,9 @@ var f = function(){
         this.__events[_type].push(_event);
     };
     /**
-     * 调用事件，一般在控件实现的具体业务逻辑中使用
+     * 调用事件，一般在控件实现的具体业务逻辑中使用<br/>
+     * 
+     * 脚本举例
      * [code]
      *   // 分配实例
      *   var _widget = _p._$$Widget._$allocate({
@@ -628,6 +713,7 @@ var f = function(){
      *       this._$dispatchEvent('onok');
      *   };
      * [/code]
+     * 
      * @method {_$dispatchEvent}
      * @param  {String}   事件类型，不区分大小写
      * @param  {Variable} 事件可接受参数，具体看调用时的业务逻辑
@@ -640,7 +726,8 @@ var f = function(){
         var _args = _r.slice.call(arguments,1);
         // single event
         if (!_u._$isArray(_event)){
-            return _event.apply(this,_args);
+            _event.apply(this,_args);
+            return;
         }
         // event list
         _u._$forEach(
@@ -654,51 +741,11 @@ var f = function(){
                 }
             },this
         );
-        return this;
     };
-    /**
-     * 在API中分配控件实例，如果指定ID已存在当前控件的实例则直接返回
-     * 
-     * [code]
-     *   var _c = nej.ut;
-     *   var _id = 'cache';
-     *   // 以下代码生成一个控件
-     *   var _cache = nej.ut._$api(_id,_c._$$Cache,{});
-     *   // 同一ID控件已经存在，直接返回实例
-     *   var _cache = nej.ut._$api(_id,_c._$$Cache,{});
-     * [/code]
-     * @api    {nej.ut._$api}
-     * @param  {String}   控件标识
-     * @param  {Function} 控件构造函数
-     * @param  {Object}   控件配置参数，不传表示只检查是否存在实例
-     * @return {Function} 控件实例
-     */
-    _p._$api = (function(){
-        var _cache = {};
-        return function(_id,_class,_options){
-            var _sn = _class.__sign__;
-            if (!_sn){
-                _sn = _u._$randString(10);
-                _class.__sign__ = _sn;
-            }
-            var _key = _id+'-'+_sn,
-                _instance = _cache[_key];
-            if (!!_options&&!_instance){
-                _instance = _class._$allocate(_options);
-                _instance._$recycle = 
-                _instance._$recycle._$aop(
-                    function(_event){
-                        delete _cache[_key];
-                        delete _instance._$recycle;
-                    });
-                _cache[_key] = _instance;
-            }
-            return _instance;
-        };
-    })();
-};
-NEJ.define(
-    '{lib}util/event.js',[
-    '{lib}base/event.js',
-    '{lib}base/util.js'
-],f);
+    
+    if (CMPT){
+        this.copy(NEJ.P('nej.ut'),_p);
+    }
+    
+    return _p;
+});
